--- a/web/package.json
+++ b/web/package.json
@@ -15,11 +15,14 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-form-hook": "^0.0.1",
     "react-hook-form": "^7.41.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
